--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 .svn/
 migrate_working_dir/
 google-services.json
+lib/firebase_options.dart
+ios/Runner/GoogleService-Info.plist
+ios/firebase_app_id_file.json
+macos/Runner/GoogleService-Info.plist
+macos/firebase_app_id_file.json
 # IntelliJ related
 *.iml
 *.ipr
