--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
   flutter_bloc: ^8.1.2
+  sentry_flutter: ^7.4.2
 
 dev_dependencies:
   flutter_test:
