--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^2.10.0
   flutter_bloc: ^8.1.2
   sentry_flutter: ^7.4.2
+  google_sign_in: ^5.2.1
+  sign_button: ^2.0.3
 
 dev_dependencies:
   flutter_test:
