--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   sign_button: ^2.0.3
   bloc: ^8.1.1
   meta: ^1.8.0
+  otp_timer_button: ^1.1.0
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
