--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,7 +28,8 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
+    // compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 33
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -56,6 +57,22 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs {
+        debug {
+            // change it as per your keystore
+            storeFile file('/home/beyond/.android/debug.keystore')
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+        release {
+            storeFile file('/home/beyond/.android/debug.keystore')
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
@@ -73,8 +90,5 @@ flutter {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
-//    implementation 'com.google.firebase:firebase-analytics'
-//    implementation 'com.google.firebase:firebase-auth'
-//    implementation 'com.google.firebase:firebase-firestore'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
