--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   meta: ^1.8.0
   otp_timer_button: ^1.1.0
   otp_text_field: ^1.1.3
+  image_picker: ^0.8.7+4
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
