--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   meta: ^1.8.0
   otp_timer_button: ^1.1.0
   otp_text_field: ^1.1.3
+  cloud_firestore: ^4.6.0
 
 dev_dependencies:
   flutter_test:
