--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   otp_text_field: ^1.1.3
   image_picker: ^0.8.7+4
   equatable: ^2.0.5
+  firebase_storage: ^11.1.2
+  universal_html: ^2.2.1
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
